--- a/backend/package.json
+++ b/backend/package.json
@@ -1,1 +1,16 @@
+{
+  "name": "sistema-cadastro-backend",
+  "version": "1.0.0",
+  "description": "Back-end do sistema básico de cadastro",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.6",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2"
+  }
+}
 
